# client

./: .buildinfo  .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  Makefile  Package.swift  README.md  client.html  genindex.html  index.html  objects.inv  package-info.json  py-modindex.html  sdk.html  search.html  searchindex.js  setup.cfg  setup.py
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: ci-build.yml  codeql-analysis.yml  python-ci.yml  python-pr.yml  python-update-reqs.yml
Sources/SDK/: Client.swift  ClientError.swift  ClientType.swift  Functions.swift  HTTPMethod.swift  Indirection.swift  Pagination.swift  PaginationItem.swift  Parameter.swift  Payload.swift  Request.swift  RequestRange.swift  Result.swift  Services.swift
Sources/SDK/Foundation/: CharacterSet.swift  Data.swift  DateFormatter.swift  Decodable.swift  HTTPURLResponse.swift  String.swift  URLComponents.swift  URLRequest.swift
Sources/SDK/Requests/: Volumes.swift
Sources/SDK/Services/: LibraryService.swift
Tests/SDKTests/: SDKTests.swift
_sources/: index.rst.txt
_static/: documentation_options.js
docs/: client.rst  conf.py  sdk.rst
requirements/: dev.txt  docs.txt  pkg.in  pkg.txt  tests.in  tests.txt
scripts/: update-requirements.sh
src/sweetrpg_client/: __init__.py  client.py  constants.py  exceptions.py  helpers.py
src/sweetrpg_sdk/: __init__.py  client.py
tests/: test-authors.json  test-persons.json  test-single-author.json  test-single-person.json  test-single-volume.json  test-volumes.json  test_client.py
(+2 files in other folders)
