[bdist_wheel]
universal = 1

[metadata]
name = sweetrpg-client
version = attr: sweetrpg_client.__version__
url = https://sweetrpg.com
project_urls =
    Documentation = https://sweetrpg.github.io/client
license = MIT
author = Paul Schifferer
author_email = dm@sweetrpg.com
long_description = file: README.md
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = find:
package_dir = = src
include_package_data = true
python_required = >=3.9

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    sweetrpg-client = sweetrpg_client.cli:main

[tool:pytest]
testpaths = tests
filterwarnings =
    error

[coverage:run]
branch = True
source =
    sweetrpg_client
    tests

[coverage:paths]
source =
    src
    */site-packages

[semantic_release]
version_variable = src/sweetrpg_client/__init__.py:__version__
branch = develop
